# LiveWDD

./: .gitignore  README.md  main_increase_core.py  main_memory.py  main_time.py  measure_memory.py  measure_time.py  memtree.py  pyproject.toml
Notebooks/: Fig_Load_Image.ipynb  Fig_Reconstruction_LiveWDD_Pyptycho_Graphene.ipynb  Fig_Reconstruction_LiveWDD_Pyptycho_Graphene_Dose.ipynb  Fig_Reconstruction_LiveWDD_Pyptycho_Graphene_Loop_Order.ipynb  Fig_Reconstruction_LiveWDD_SrTIO3.ipynb  Plot_Computation.ipynb  reference-validation.ipynb  stepwise-reformulation.ipynb
src/live_wdd/: dim_reduct.py  live_wdd.py  parameters.py  prepare_resize_data.py  wdd_udf.py
