[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "live_wdd"
description = "Reformulation of Wigner Distribution Deconvolution (WDD) for live reconstruction"
license = {file = "LICENSE"}
keywords = ["ptychography", "wdd", "wigner distribution deconvolution", "electron microscopy", "4D STEM"]
requires-python = ">=3.7"
version = "1.0"
dependencies = [
    "numpy",
    "numba",
    "scipy",
    "libertem"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
where = ["src"]
